ingress/kubeapps/magento/magento-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: magento
  namespace: magento
spec:
#   tls:
#   - hosts:
#     - lope.test
#     secretName: lope-tls-secret
  rules:
  - host: magento.lope.test
    http:
      paths:
      - path: /
        backend:
          serviceName: magento
          servicePort: 8080
